[tool.poetry]
name = "sparcli"
version = "0.1.2"
description = "Visualize metrics as text in real-time (sparklines)"
readme = "README.md"
authors = ["Alex Fraser <alex.d.fraser@gmail.com>"]
license = "MIT"
repository = "https://github.com/z0u/sparcli"
homepage = "https://github.com/z0u/sparcli"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
keywords = ["console", "sparkline", "data", "visualization"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
black = "^19.10b0"
pytest-mock = "^2.0.0"
coverage = {extras = ["toml"], version = "^5.0.3"}

[tool.coverage.run]
omit = ["sparcli/capture.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no-cover",
    "return self",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
